Support for applet embeding

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 <body>
     <h1>Gilbert Game</h1>
     <p>Testing the hosting of the project!</p>
+    <script src="https://www.java.com/js/deployJava.js"></script>
+    <script> 
+        var attributes = {
+            code:'components.GameApplet',  width:640, height:640} ; 
+        var parameters = {jnlp_href: 'tilegame_applet.jnlp'} ; 
+        deployJava.runApplet(attributes, parameters, '1.7'); 
+    </script>
 </body>
 </html>
