--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h1>Gilbert Game</h1>
     <p>Testing the hosting of the project!</p>
     <applet 
-    code = 'TileGame.src.AppletExp1' 
+    code = 'dev.gilbertgame.tilegame.AppletExp1' 
     archive = 'TileGame.jar'
-    width = 300
-    height = 300>
+    width = 640
+    height = 640>
     <param name="permissions" value="sandbox" />
     </applet>
 </body>
